Semantizador aparentemente OK, GeradorVoz não utilizando o tempo do google e reconhecedor de voz com metodo paths.get